--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,13 +1,6 @@
 apiVersion: skaffold/v4beta10
 kind: Config
-metadata:
-  name: go-outyet
-deploy:
-  helm:
-    releases:
-      - name: outyet
-        createNamespace: true
-        namespace: app
-        chartPath: helm
-        valuesFiles:
-          - helm/values.yaml
+requires:
+  - path: infrastructure/outyet/skaffold.yaml
+  - path: infrastructure/cert-manager/skaffold.yaml
+  - path: infrastructure/cluster-issuer/skaffold.yaml
